--- a/src/styler-page.css
+++ b/src/styler-page.css
@@ -35,15 +35,14 @@ html, body {
     border-bottom: 1px solid #f0f0f0;
   }
   
-  .logo-container {
-    display: flex;
-    align-items: center;
-  }
-  
   .logo {
-    max-width: 50px;
-    max-height: 40px;
+    position: absolute;
+    top: 20px;
+    left: 2rem;
+    max-width: 57px;
+    max-height: 71px;
     object-fit: contain;
+    z-index: 20;
   }
   
   .nav-links {
